--- a/arch/arm64/boot/dts/qcom/msm8916-modem-qdsp6.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8916-modem-qdsp6.dtsi
@@ -23,6 +23,10 @@
 	status = "okay";
 };
 
+&gps_mem {
+	status = "okay";
+};
+
 &lpass {
 	status = "reserved"; /* Controlled by QDSP6 */
 };
@@ -32,6 +36,10 @@
 };
 
 &mba_mem {
+	status = "okay";
+};
+
+&memshare {
 	status = "okay";
 };
 
